# wasm-benchmarks

./: Cargo.toml  DATA.md  README.md  index.js  package.json
benches/: my_benchmark.rs
python/: bench_fft.py  bench_min.py
src/: lib.rs
