[package]
name = "add"
version = "0.1.0"
authors = ["The wasm-bindgen Developers"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
rustfft = "6"
rand = "0.8.5"
once_cell = "1"

[[bench]]
name = "my_benchmark"
harness = false

[dev-dependencies]
criterion = { git = "https://github.com/bheisler/criterion.rs", branch = "version-0.4", default-features = false }